--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.0",
     "vaul": "^1.1.2",
-    "zod": "^3.25.39"
+    "zod": "^3.25.39",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@react-router/dev": "^7.5.3",
