--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,10 @@
-# Deployment used by `npx convex dev`
-CONVEX_DEPLOYMENT=
+# Environment
+VITE_ENV=local
 
-VITE_CONVEX_URL=
-VITE_CONVEX_SITE_URL=
+# URLs
+VITE_FRONTEND_URL=http://localhost:5173
+VITE_API_BASE_URL=http://127.0.0.1:8000
 
+# Clerk Authentication
 VITE_CLERK_PUBLISHABLE_KEY=
 CLERK_SECRET_KEY=
-VITE_CLERK_FRONTEND_API_URL=
-
-FRONTEND_URL=
