--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@clerk/nextjs": "^6.23.2",
     "@clerk/react-router": "^1.4.8",
     "@polar-sh/sdk": "^0.32.16",
+    "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dialog": "^1.1.14",
@@ -36,6 +37,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "isbot": "^5.1.27",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.511.0",
     "motion": "^12.15.0",
     "next-themes": "^0.4.6",
