--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ai-sdk/react": "^1.2.12",
     "@clerk/nextjs": "^6.23.2",
     "@clerk/react-router": "^1.4.8",
+    "@nivo/pie": "^0.99.0",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.2",
@@ -33,6 +34,9 @@
     "@vercel/analytics": "^1.5.0",
     "@vercel/react-router": "^1.1.2",
     "ai": "^4.3.16",
+    "apexcharts": "^5.3.6",
+    "chart.js": "^4.5.1",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "isbot": "^5.1.27",
@@ -40,9 +44,13 @@
     "lucide-react": "^0.511.0",
     "motion": "^12.15.0",
     "next-themes": "^0.4.6",
+    "plotly.js": "^3.3.1",
     "react": "^19.1.0",
+    "react-apexcharts": "^1.9.0",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.1.0",
     "react-markdown": "^10.1.0",
+    "react-plotly.js": "^2.6.0",
     "react-router": "^7.5.3",
     "recharts": "^2.15.3",
     "sonner": "^2.0.3",
